# python_modules

python_module_00/ex1/: ft_garden_name.py
python_module_00/ex3/: ft_harvest_total.py
python_module_00/ex5/: ft_water_reminder.py
python_module_00/ex6/: ft_count_harvest_iterative.py  ft_count_harvest_recursive.py
python_module_00/ex7/: ft_seed_inventory.py
python_module_00_old/ex0/: ft_first_exception.py
python_module_00_old/ex1/: ft_raise_exception.py
python_module_00_old/ex2/: ft_different_errors.py
python_module_00_old/ex3/: ft_custom_errors.py
python_module_00_old/ex4/: ft_finally_block.py
python_module_01/ex0/: ft_garden_intro.py
python_module_01/ex1/: ft_garden_data.py
python_module_01/ex2/: ft_plant_growth.py
python_module_01/ex3/: ft_plant_factory.py
python_module_01/ex4/: ft_garden_security.py
python_module_01/ex5/: ft_plant_types.py
python_module_01/ex6/: ft_garden_analytics.py
python_module_02/ex0/: ft_first_exception.py
python_module_02/ex1/: ft_raise_exception.py
python_module_02/ex2/: ft_different_errors.py
python_module_02/ex3/: ft_custom_errors.py
python_module_02/ex4/: ft_finally_block.py
python_module_03/ex0/: ft_command_quest.py
python_module_06/: ft_alembic_0.py  ft_alembic_1.py  ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_distillation_0.py  ft_distillation_1.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_1.py  ft_transmutation_2.py
python_module_07/: battle.py  capacitor.py  tournament.py
python_module_08/ex1/: loading.py  pyproject.toml  requirements.txt
(+40 files in other folders)
