[tool.poetry]
name = "matrix-loading"
version = "0.1.0"
description = "Matrix data analysis project"
authors = ["student"]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
